# NEP21-faucet

./: Cargo.toml
res/: nep21_faucet.wasm
scripts/: build.sh  deploy.sh  test.sh
src/: lib.rs
src/tests/: test_utils.rs
